--- a/index.html
+++ b/index.html
@@ -536,19 +536,12 @@
         </div><br>
         <p>&emsp;推し活で友人ができやすい現象。実は、集団の構造によるものだとわかったんです！<br>
         <p>&emsp;推し活の中心には推される対象がいて、その周りにファンが集まって対象を支える…、この構造は集団安定にとっても良いんです‼<br>
-<br>
-        </p>
-        <div class="embedded-image">
-        <img src="We are da one 2025 03 09 12.png" alt="グラフ1">
-        </div><br>
-        <p>&emsp;カメラの前に映っていた集団に集まっている人数をグラフにして可視化したんです!<br>
-        <p>&emsp;この波状になっているデータを応用すれば、集団形成のメソッドに使えるかも!?<br>
-        <p>&emsp;これからの研究への希望が詰まった一作目です!<br>
-            <br>
+        <p>&emsp;この構造を応用すれば、より効率的で充実している安定性の高い集団が作りやすくなるかもしれません。<br>
+        <p>&emsp;世の中の流れに乗り切れなかった男が精一杯追いつこうとした二作目です!<br>
         </p>
 
               <div class="past-article-container">
-        <a href="https://drive.google.com/file/d/1cxvQxisq7BmqiCqcXfTFSTSornEH_j0g/view?usp=sharing" class="past-article-box">
+        <a href="https://drive.google.com/file/d/1OSCcmqgq8TpoEo3AlK0kOjXXbIlZBzjI/view?usp=sharing" class="past-article-box">
             論文のPDFファイルの閲覧はこちらから
 </a>
         </div>
